--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,18 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+geng = "0.18"
+geng-utils = "0.4.0"
+serde = { version = "1.0.219", features = ["derive"] }
+wasm-bindgen = { version = "=0.2.100", features = ["serde"] }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+web-sys = "0.3"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+ctrlc = "3.4.7"
+rustrict = "0.7.36"
+
+[patch.crates-io]
+geng = { git = "https://github.com/geng-engine/geng", rev = "3a94dac77da86049059d5fbb21a4feb916d67c22" }
+geng-utils = { git = "https://github.com/Nertsal/geng-utils", rev = "f6e07e1db3096d710d5242c80c3781fd2d554045"}
