--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - run: cargo geng build --release --platform web
         env:
-          CONNECT=${{ secrets.CONNECT }}
+          CONNECT: ${{ secrets.CONNECT }}
       - name: Upload artifacts (web)
         uses: actions/upload-artifact@v4
         with:
