--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       contents: write
     environment:
       name: main
-      url: https://nertsal.github.io/down-to-trail
+      url: https://nertsal.github.io/trail-blazer
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
