--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
   build-web:
     name: Build (Web)
     runs-on: ubuntu-latest
-    container: ghcr.io/geng-engine/cargo-geng:aa2c2242d7024734f3d5f6e5c9879a19c01b100a
+    container: ghcr.io/geng-engine/cargo-geng@sha256:c3b33ef1f25fda66b45d0bffe495c734c3080f2b9b88238c69f41424d7716e01
     steps:
       - name: Checkout
         uses: actions/checkout@v3
